--- a/AndroidCameraRecognition/app/src/main/res/layout/tab_fragment_visitor.xml
+++ b/AndroidCameraRecognition/app/src/main/res/layout/tab_fragment_visitor.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="Return"
+        android:text="Visitor (To be implemented)"
         android:textAppearance="?android:attr/textAppearanceLarge"/>
 
 </RelativeLayout>
