--- a/AndroidCameraRecognition/app/src/main/res/layout/activity_login.xml
+++ b/AndroidCameraRecognition/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,8 @@
         android:layout_marginRight="8dp"
         android:layout_centerInParent="true"
         android:layout_width="500dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/login_linearlyt">
 
         <com.rengwuxian.materialedittext.MaterialEditText
             android:id="@+id/edtEmail"
@@ -70,5 +71,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="44dp"
         app:srcCompat="@drawable/acntech" />
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/login_progressBar"
+        android:layout_below="@id/login_linearlyt"
+        android:layout_centerHorizontal="true"
+        android:visibility="invisible"/>
 
 </RelativeLayout>
