--- a/AndroidCameraRecognition/app/src/main/res/values/styles.xml
+++ b/AndroidCameraRecognition/app/src/main/res/values/styles.xml
@@ -12,4 +12,10 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="MyButton" parent="Theme.AppCompat.Light">
+        <item name="colorControlHighlight">@color/colorPrimaryDark</item>
+        <item name="colorButtonNormal">@color/buttonBackground</item>
+        <item name="buttonStyle">@style/Widget.AppCompat.ActionButton</item>
+    </style>
+
 </resources>
