--- a/AndroidCameraRecognition/app/src/main/res/layout/tab_fragment_asset.xml
+++ b/AndroidCameraRecognition/app/src/main/res/layout/tab_fragment_asset.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v7.widget.LinearLayoutCompat
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:background="@drawable/background">
 
     <Button
@@ -51,4 +52,4 @@
         android:textColor="@color/colorPrimary"
         android:textSize="@dimen/textSizeAsset" />
 
-</RelativeLayout>
+</android.support.v7.widget.LinearLayoutCompat>
